# apertium-nor-ukr

./: .gitignore  Makefile.am  README  README.md  apertium-nor-ukr.nor-ukr.dix  configure.ac  modes.xml
test/: tests.json
